--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <html>
 
 <head>
-
+    <title>Easybank</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="logo">
+            <img src="easybank-landing-page-master/images/logo.svg" alt="" class="logo">
+        </div>
+        <div class="links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+        </div>
+        <div class="request_invite1">
+            <a href="#" class="request_invite1_a">Request Invite</a>
+        </div>
+    </header>
 </body>
 
 </html>
